test_suite/tests/ui/unknown-attribute/container.stderr
error: unknown serde container attribute `abc`
 --> $DIR/container.rs:4:9
  |
4 | #[serde(abc = "xyz")]
  |         ^^^
